Ajout reponse  11 sur fichier Security + Fichiers Dockerfile

--- a/src/app/components/locataires/locataire/Dockerfile
+++ b/src/app/components/locataires/locataire/Dockerfile
@@ -1,6 +1,17 @@
 
 FROM mongo
 
+# Définition du workdir
+WORKDIR /app
+
+RUN npm install
+
+# Exposition du port 8081
+EXPOSE 8081
+
+# Démarrage du serveur
+CMD ["npm", "start"]
+
 
 
 
