--- a/src/app/components/locations/location-modal/Dockerfile
+++ b/src/app/components/locations/location-modal/Dockerfile
@@ -1,3 +1,15 @@
 FROM mongo
 
+# Définition du workdir
+WORKDIR /app
+
+RUN npm install
+
+# Exposition du port 8081
+EXPOSE 8082
+
+# Démarrage du serveur
+CMD ["npm", "start"]
+
+
 
