--- a/src/app/components/vehicules/vehicule/Dockerfile
+++ b/src/app/components/vehicules/vehicule/Dockerfile
@@ -1,3 +1,14 @@
 From mongo 
 
+# Définition du workdir
+WORKDIR /app
+
+RUN npm install
+
+# Exposition du port 8084
+EXPOSE 8084
+
+# Démarrage du serveur
+CMD ["npm", "start"]
+
 
